# pybiocmtools

./: README.md  pyproject.toml
src/pybiocmtools/: base_cli.py  data_tools.py  slurm_tools.py
src/pybiocmtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pybiocmtools/create_cellranger/: argparser.py  cli.py  create_cellranger_scripts.py
src/pybiocmtools/create_sbatch/: argparser.py  cli.py  create_sbatch.py
tests/: cr_10282-MR-0048.sh  cr_10282-MR-0049.sh  test_header.py
