[build-system]
requires = ["setuptools>=61.0",
            "chevron==0.14.0",
            "numpy==1.26.4",
            "pandas==2.2.2"git s
]
build-backend = "setuptools.build_meta"

[project]
name = "pybiocmtools
version = "0.0.1"
authors = [
  { name="Bryan Granger", email="grangerb@musc.edu" },
]
description = "Tools for the BioCM at MUSC"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bioinformaticsmusc/pybiocmtools"
Issues = "https://github.com/bioinformaticsmusc/pybiocmtools/issues"